@@ -562,13 +562,13 @@ peak.running.timers.ITimerService   = 'peak.running.timers.TimerService'
 peak.running.timers.ITimer          = 'peak.running.timers.Timer'
 
 peak.web.interfaces.IAuthService    = web.NullAuthenticationService
-peak.web.interfaces.ISkinService    = web.SkinService
-peak.web.interfaces.ILayerService   = web.LayerService
 
 peak.storage.interfaces.ITransactionService =
     'peak.storage.transactions.TransactionService'
 
 peak.security.interfaces.IInteraction = security.Interaction
+
+
 
 
 
